fixed intro styles for legibility

--- a/_static/sass/new-web-typography.scss
+++ b/_static/sass/new-web-typography.scss
@@ -175,6 +175,7 @@ svg {
         max-width: $max-width !important;
         margin: 0 auto;
         @include media(">medium") {
+            max-width: ($max-width + 10px) !important;
             padding: 25px 6% !important;
         }
         @include media(">large") {
@@ -187,9 +188,10 @@ svg {
 .intro {
     margin: 0;
     padding: 15px 0 10px 0;
-    font-size: 90%;
+    font-size: 100%;
 
     @include media(">medium"){
+        font-size: 105%;
         padding: 30px 0 10px 0;
     }
 
